zooming issue seems solved by setting 'main' element to overflow hidden and removing padding by overriding them in global css

--- a/app/globals.css
+++ b/app/globals.css
@@ -5,3 +5,10 @@
 html {
     --line-color: #e5e7eb;
 }
+
+
+main {
+    overflow: hidden;
+    padding-left: 0rem !important;
+    padding-right: 0rem !important;
+}
